crates/leaf-macros/tests/ui/unknown_stereotype_arg_is_a_hard_error.rs
//! An unknown `#[component(...)]` argument is a loud `compile_error!` (the
//! attribute schema is closed: only `name` / `scope`).

use leaf_macros::component;

#[component(bogus = "x")]
struct Thing;

fn main() {}
